--- a/css/myresume.css
+++ b/css/myresume.css
@@ -11,7 +11,43 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1 .text-primary{
-	font-size: 3rem ;
+	font-family: 'Noto Sans TC', sans-serif;
+	font-size: 2rem ;
 	letter-spacing : -0.05 rem ;
-	line-height : 3rem
+	line-height : 1.5rem
+}
+
+h2 .text-primary{
+	font-family: 'Noto Sans TC', sans-serif;
+	font-size: 2rem ;
+	letter-spacing : -0.05 rem ;
+	line-height : 1.5rem
+}
+
+h3 .text-primary{
+	font-family: 'Noto Sans TC', sans-serif;
+	font-size: 2rem ;
+	letter-spacing : -0.05 rem ;
+	line-height : 1.5rem
+}
+
+h4 .text-primary{
+	font-family: 'Noto Sans TC', sans-serif;
+	font-size: 1.2rem ;
+	letter-spacing : -0.05 rem ;
+	line-height : 1rem
+}
+
+h5 .text-primary{
+	font-family: 'Noto Sans TC', sans-serif;
+	font-size: 1rem ;
+	letter-spacing : -0.05 rem ;
+	line-height : 1rem
+}
+
+h6 .text-primary{
+	font-family: 'Noto Sans TC', sans-serif;
+	font-size: 1rem ;
+	letter-spacing : -0.05 rem ;
+	line-height : 1rem
 }
