--- a/css/myresume.css
+++ b/css/myresume.css
@@ -2,6 +2,10 @@ html{
 	font-family: 'Noto Sans TC', sans-serif;
 }
 
+body{
+	font-family: 'Noto Sans TC', sans-serif;
+}
+
 h1, h2, h3, h4, h5, h6{
 	font-family: 'Noto Sans TC', sans-serif;
 	font-size: 1.2 rem ;
