--- a/css/myresume.css
+++ b/css/myresume.css
@@ -6,7 +6,7 @@ body{
 	font-family: 'Noto Sans TC', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 ,p{
+h1, h2, h3, h4, h5, h6 , p, div{
 	font-family: 'Noto Sans TC', sans-serif;
 	font-size: 1.2rem ;
 	text-transform: none ;
