--- a/css/myresume.css
+++ b/css/myresume.css
@@ -85,3 +85,10 @@ nav-link js-scroll-trigger active{
 ul.social-buttons {
     margin: 0  auto;
 }
+
+#portfolio .portfolio-item .portfolio-caption {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 25px;
+    text-align: center;
+    background-color: #CCCCFF;
