--- a/css/myresume.css
+++ b/css/myresume.css
@@ -91,4 +91,24 @@ ul.social-buttons {
     margin: 0 auto;
     padding: 25px;
     text-align: center;
-    background-color: #CCCCFF;
+background-color: #CCCCFF;
+}
+
+ul.social-buttons li a {
+    font-size: 20px;
+    line-height: 50px;
+    display: block;
+    width: 50px;
+    height: 50px;
+    -webkit-transition: all .3s;
+    transition: all .3s;
+    color: #125d70;
+    border-radius: 100%;
+    outline: 0;
+	background-color: #FFFF77;
+}
+
+.timeline>li .timeline-image {
+
+    background-color: #FFFF77;
+}
